<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="start_game">Start Game</string>
    <string name="pick_your_game_mode">Pick your game mode</string>
    <string name="exit">Exit</string>
</resources>