<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".OnlinePlayerName">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:inputType="text"
        android:id="@+id/playerNameEt"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        android:hint="@string/enter_player_name"
        android:paddingStart="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:paddingEnd="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_blue1000"
        android:text="@string/start_game"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/startGameBtn"/>
</LinearLayout>