<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".AddPlayers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:text="@string/enter_player_name"
        android:textStyle="bold"
        />
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/x_icon"
            />
        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/playerOneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/player_one"
            android:textColorHint="@color/light_white"
            android:background="@color/dark_blue"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/o_icon"
            />
        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/playerTwoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/player_two"
            android:textColorHint="@color/light_white"
            android:background="@color/dark_blue"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/start_game"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_back_blue1000"/>


</LinearLayout>